<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_home"
            android:checked="true"
android:icon="@drawable/ic_nav_home"

            android:title="@string/home" />
        <item
            android:id="@+id/nav_item_product"
            android:checked="true"
            android:icon="@drawable/ic_nav_products"
            android:title="@string/products" />
        <item
            android:id="@+id/nav_item_customer"
            android:checked="true"
            android:icon="@drawable/ic_nav_customers"
            android:title="@string/customers" />
        <item
            android:id="@+id/nav_item_orders"
            android:checked="true"
android:icon="@drawable/ic_nav_orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_item_notification"
            android:checked="true"
            android:icon="@drawable/ic_nav_notification"
            android:title="@string/notification" />
    </group>
</menu>